--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,11 @@ button:active {
   width: 100%;
   height: 100%;
   opacity: 0;
-  cursor: pointer;
+  cursor: crosshair;
+}
+
+.book-shelf-changer select ::selection{
+  background-color: #2e7c31;
 }
 
 /* book cover */
